--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-drag-drop-files": "^2.3.2",
+    "react-dropzone": "^12.0.1",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
